applied comments of @nermin

--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -16,7 +16,7 @@
   </tbody>
 </table>
 <div class="code-snippet">
-<h3>What does the following program print upon execution?</h3>
+<h3>What does the following program print?</h3>
 <pre class="prettyprint lang-scala">
 trait OverridesEquals {
   override def equals(x: Any) = super.equals(x)
@@ -37,7 +37,8 @@ println(cc1.## == cc2.##)
 </pre>
 
 <ol>
-<li>Prints:
+<li>
+Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -46,7 +47,8 @@ false
 </pre>
 </li>
 
-<li id="correct-answer">Prints:
+<li id="correct-answer">
+Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -55,7 +57,8 @@ true
 </pre>
 </li>
 
-<li>Prints:
+<li>
+Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -64,7 +67,8 @@ false
 </pre>
 </li>
 
-<li>Prints:
+<li>
+Prints:
 <pre class="prettyprint lang-scala">
 false
 false
@@ -96,7 +100,7 @@ itself does not provide a definition for one of these methods and <em>only</em> 
 a concrete definition is not given in some base class of the case class
 (except <tt>AnyRef</tt>).
 </p><p>
-In our example, the base class <tt>Base</tt> provides an <tt>equals</tt>
+In our example, the base trait <tt>OverridesEquals</tt> provides an <tt>equals</tt>
 method, so the case class does not provide its own definition and the
 comparison of two different instances returns <tt>false</tt>.
 </p><p>
@@ -105,4 +109,3 @@ in class <tt>CC</tt> nor in some base class, so here the implicitly overridden v
 is used which returns the same value for equal elements.
 </p>
 </div>
-
