Fixed a bug which manifested only in Chrome: switching between puzzlers sometimes only partially loaded the new puzzler.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 
         $('a[id|="pzzlr"]').each(function(index, elem) {          
 	  $(elem).click(function() {
+            $('#prime-space').html("");
 	    $('#prime-space').load('puzzlers/' + elem.id + '.html', function() {
 	      prettyPrint();
 	      document.location.hash = elem.id;
