Fixed incorrect spelling in puzzler #10.

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -46,7 +46,7 @@ Always prints
 </li>
 
 <li>
-Nondeterministicly prints either
+Nondeterministically prints either
 <pre class="prettyprint lang-scala">
 1
 </pre>
