Added the missing print call

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -27,7 +27,7 @@ object XY {
   }
 }
 
-if(math.random > 0.5) XY.X.value else XY.Y.value
+print(if(math.random > 0.5) XY.X.value else XY.Y.value)
 </pre>
 
 <ol>
