--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -16,7 +16,7 @@
   </tbody>  
 </table>
 <div class="code-snippet">
-  <h3>What does the following code do?</h3>
+  <h3>What is the result of executing the following code?</h3>
   <pre class="prettyprint lang-scala">
 val ij: (Int, Int) = ("3", "4")
 val (i, j): (Int, Int) = ("3", "4")
