--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -16,7 +16,7 @@
   </tbody>  
 </table>
 <div class="code-snippet">
-  <h3>What does the following code print?</h3>
+  <h3>What is the result of executing the following code?</h3>
   <pre class="prettyprint lang-scala">
 trait A {
   val foo: Int
