--- a/puzzlers/pzzlr-template.html
+++ b/puzzlers/pzzlr-template.html
@@ -19,7 +19,7 @@
   </tbody>  
 </table>
 <div class="code-snippet">
-  <h3>What does the following code do?</h3>
+  <h3>What is the result of executing the following code?</h3>
   <pre class="prettyprint lang-scala">
 PLACEHOLDER
   </pre>
