--- a/puzzlers/pzzlr-012.html
+++ b/puzzlers/pzzlr-012.html
@@ -30,9 +30,9 @@
   </pre>
   <ol>  
     <li>Throws a 'divide by zero' exception within the catch block</li>
-    <li>Prints 1</li>
+    <li id="correct-answer">Prints 1</li>
     <li>Prints NaN</li>
-    <li id="correct-answer">Prints &lt;lazy&gt;</li>
+    <li>Prints &lt;lazy&gt;</li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
