--- a/contribute.html
+++ b/contribute.html
@@ -114,6 +114,7 @@
               <li><a href="/#pzzlr-009" id="pzzlr-009">Map Comprehension</a></li>
               <li><a href="/#pzzlr-010" id="pzzlr-010">Init You, Init Me</a></li>
               <li><a href="/#pzzlr-011" id="pzzlr-011">A Case of Equality</a></li>
+              <li><a href="/#pzzlr-012" id="pzzlr-012">If At First You Don't Succeed...</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
