--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
               <li><a href="#" id="pzzlr-009">Map Comprehension</a></li>
               <li><a href="#" id="pzzlr-010">Init You, Init Me</a></li>
               <li><a href="#" id="pzzlr-011">A Case of Equality</a></li>
+              <li><a href="#" id="pzzlr-012">If At First You Don't Succeed...</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
