changed third answer

--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -37,9 +37,9 @@ val s: String = s + s
 </pre>
 </li>
 
-<li>Prints:
+<li>Fails at runtime with a 
 <pre class="prettyprint lang-scala">
-4
+java.lang.NullPointerException
 </pre>
 </li>
 
