Fixed a language error pointed out by Dominik Gruntz. Thanks, Dominik!

--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -60,7 +60,7 @@ C M I X
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    Since <tt>RomanNumeral</tt>s are ordered by their values, iterating over the sorted set of <tt>numerals</tt> will return them in the in that order and result in the representations being printed according to the <strong>value</strong>.
+    Since <tt>RomanNumeral</tt>s are ordered by their values, iterating over the sorted set of <tt>numerals</tt> will return them in that order and result in the representations being printed according to the <strong>value</strong>.
   </p>
   <p>
     Mapping the numerals to their <em>representation</em> will result in a sorted set of <tt>String</tt>s which, naturally enough, will be ordered lexicographically. Iterating over them will thus return them in that order.
