--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -54,7 +54,7 @@ println(value)
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-Scala does not complain about unreachable code bloks, therefore the code compiles fine.
+Scala does not complain about unreachable code blocks, therefore the code compiles fine.
 </p><p>
 The answer to this question can be found in section 6.20 of the SLS:
 <blockquote>
