removed `correct-answer` id from last answer

--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -59,7 +59,7 @@ java.lang.NullPointerException
 </pre>
 </li>
 
-<li id="correct-answer">Prints:
+<li>Prints:
 <pre class="prettyprint lang-scala">
 4
 8
