Added puzzlers 15 ("Private Lives") and 16 ("Self: see 'Self'"). Thanks again, Dominik!

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
               <li><a href="#" id="pzzlr-011">A Case of Equality</a></li>
               <li><a href="#" id="pzzlr-012">If At First You Don't Succeed...</a></li>
               <li><a href="#" id="pzzlr-013">To Map, or Not To Map</a></li>
+              <li><a href="#" id="pzzlr-015">Private Lives</a></li>
+              <li><a href="#" id="pzzlr-016">Self: See 'Self'</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
