--- a/puzzlers/pzzlr-015.html
+++ b/puzzlers/pzzlr-015.html
@@ -1,4 +1,4 @@
-<h1>Private Affairs</h1>
+<h1>Private Lives</h1>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -18,7 +18,7 @@
 <div class="code-snippet">
   <h3>What is the result of compiling the following code?</h3>
 <pre class="prettyprint lang-scala">
-object Affairs {
+object Lives {
   class Private {
     def foo1: Any = new Private.C1
     def foo2: Any = new Private.C2
