--- a/about.html
+++ b/about.html
@@ -116,6 +116,8 @@
               <li><a href="/#pzzlr-011" id="pzzlr-011">A Case of Equality</a></li>
               <li><a href="/#pzzlr-012" id="pzzlr-012">If At First You Don't Succeed...</a></li>
               <li><a href="/#pzzlr-013" id="pzzlr-013">To Map, or Not To Map</a></li>
+              <li><a href="/#pzzlr-015" id="pzzlr-015">Private Lives</a></li>
+              <li><a href="/#pzzlr-016" id="pzzlr-016">Self: See 'Self'</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
