--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
               <li><a href="/#pzzlr-013" id="pzzlr-013">To Map, or Not To Map</a></li>
               <li><a href="/#pzzlr-015" id="pzzlr-015">Private Lives</a></li>
               <li><a href="/#pzzlr-016" id="pzzlr-016">Self: See 'Self'</a></li>
+              <li><a href="/#pzzlr-017" id="pzzlr-017">One Egg Or Two..?</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
