--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
               <li><a href="#" id="pzzlr-013">To Map, or Not To Map</a></li>
               <li><a href="#" id="pzzlr-015">Private Lives</a></li>
               <li><a href="#" id="pzzlr-016">Self: See 'Self'</a></li>
+              <li><a href="#" id="pzzlr-017">One Egg Or Two..?</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
