--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -55,6 +55,8 @@ println(value)
 <h3>Explanation</h3>
 <p>
 Scala does not complain about unreachable code blocks, therefore the code compiles fine.
+If you want to be warned about unreachable code, then use the compiler option <tt>-Ywarn-dead-code</tt>.
+If you want to see a compiler error instead of a warning, then in addition use the compiler option <tt>-Xfatal-warnings</tt>.
 </p><p>
 The answer to this question can be found in section 6.20 of the SLS:
 <blockquote>
