--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
               <li><a href="#" id="pzzlr-015">Private Lives</a></li>
               <li><a href="#" id="pzzlr-016">Self: See 'Self'</a></li>
               <li><a href="#" id="pzzlr-017">One Egg or Two..?</a></li>
+              <li><a href="#" id="pzzlr-018">Return to Me!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
