Moved Analytics JS part to the end for faster loading of the page

--- a/index.html
+++ b/index.html
@@ -8,20 +8,7 @@
  <link href="css/prettify.css" type="text/css" rel="stylesheet" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script type="text/javascript" src="js/prettify.js"></script>
- <script type="text/javascript">
-
-   var _gaq = _gaq || [];
-   _gaq.push(['_setAccount', 'UA-31486114-1']);
-   _gaq.push(['_trackPageview']);
-
-   (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-   })();
-  
-
- </script>
+ 
 </head>
 
 <body data-spy="scroll" data-target=".subnav" data-offset="50"">
@@ -184,9 +171,9 @@
 	  </footer>
           </div> 
           </div>         
-	</div>
-      </div>
-    </div>
+	</div><!--/prime-space-->
+      </div><!--/raw-fluid-->
+    </div><!--/container-fluid-->
     <script type="text/javascript"> 
       if (document.location.hash) {
 	var elem = $(document.location.hash)[0]
@@ -210,5 +197,20 @@
 	  $('#welcome-content').show();
         }
     </script>
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-31486114-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+	  
+    </script>
+
   </body>
 </html>
