--- a/puzzlers/pzzlr-020.html
+++ b/puzzlers/pzzlr-020.html
@@ -21,10 +21,10 @@
 def invert(v3: Int)(v2: Int = 2, v1: Int = 1) {
   println(v1 + ", " + v2 + ", " + v3);
 }
-def partial = invert(3) _
+def invert3 = invert(3) _
 
-partial(v1 = 2)
-partial(v1 = 2, v2 = 1)
+invert3(v1 = 2)
+invert3(v1 = 2, v2 = 1)
 </pre>
 
 <ol>
@@ -35,19 +35,19 @@ partial(v1 = 2, v2 = 1)
 </pre>
 </li>
 
-<li id="correct-answer">The first invocation of <tt>partial</tt> fails with a compilation error, and the second prints:
+<li id="correct-answer">The first invocation of <tt>invert3</tt> fails with a compilation error, and the second prints:
 <pre class="prettyprint lang-scala">
 1, 2, 3
 </pre>
 </li>
 
-<li>The second invocation of <tt>partial</tt> fails with a compilation error, and the first prints:
+<li>The second invocation of <tt>invert3</tt> fails with a compilation error, and the first prints:
 <pre class="prettyprint lang-scala">
 2, 2, 3
 </pre>
 </li>
 
-<li>Both invocation of <tt>partial</tt> fail with a compilation error.
+<li>Both invocation of <tt>invert3</tt> fail with a compilation error.
 </li>
 
 
@@ -58,21 +58,21 @@ partial(v1 = 2, v2 = 1)
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-The type of <tt>partial</tt> after eta-expansion (SLS, section 6.26.5) is no longer a method but a function object
-as reported by the REPL, i.e. an instance of <tt>Function2[Int, Int, Unit]</tt>.
+The type of <tt>invert3</tt> after eta-expansion (SLS, section 6.26.5) is no longer a method but a function object,
+i.e. an instance of <tt>Function2[Int, Int, Unit]</tt>. This is also reported by the REPL:
 <pre class""prettyprint lang-scala">
-scala> def partial = invert(3) _
-partial: (Int, Int) => Unit
+scala> def invert3 = invert(3) _
+invert3: (Int, Int) => Unit
 </pre>
-This function object has an <tt>apply</tt> method with the following signature:
+This function object has an <tt>apply</tt> method (inherited from <tt>Function2[T1, T2, R]</tt>) with the following signature:
 <pre class""prettyprint lang-scala">
   def apply(v1: T1, v2: T2): R
 </pre>
-In partucular, this method defines no arguments with default values!
+In partucular, this method defines no default values for its arguments!
 </p>
 <p>
-As a consequence, <tt>partial(v1 = 2)</tt> leads to a compile time error (as there are not enough arguments for method <tt>apply</tt>), 
-and <tt>partial(v1 = 2, v2 = 1)</tt> prints <tt>1, 2, 3</tt> as the parameter <tt>v1</tt> (which corresponds to the parameter
+As a consequence, <tt>invert3(v1 = 2)</tt> leads to a compile time error (as there are not enough arguments for method <tt>apply</tt>), 
+and <tt>invert3(v1 = 2, v2 = 1)</tt> prints <tt>1, 2, 3</tt> as the parameter <tt>v1</tt> (which corresponds to the parameter
 <tt>v2</tt> in method <tt>invert</tt>) is set to <tt>2</tt> and parameter <tt>v2</tt> (which corresponds to the parameter
 <tt>v1</tt> in method <tt>invert</tt>) is set to <tt>1</tt>.
 </p>
