Allowing puzzlers to be commented (issue #27)

--- a/puzzlers/pzzlr-006.html
+++ b/puzzlers/pzzlr-006.html
@@ -1,4 +1,6 @@
-<h1>The Missing List</h1>
+<div id="title">
+  <h1>The Missing List</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -50,7 +52,7 @@ Int = 2
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
