--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -1,4 +1,6 @@
-<h1>Init You, Init Me</h1>
+<div id="title">
+  <h1>Init You, Init Me</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -63,7 +65,7 @@ Fails with a compilation error.
 </ol>
 
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
