--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -1,4 +1,6 @@
-<h1>To Map, or Not To Map</h1>
+<div id="title">
+  <h1>To Map, or Not To Map</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -56,7 +58,7 @@ C M I X
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
