--- a/puzzlers/pzzlr-015.html
+++ b/puzzlers/pzzlr-015.html
@@ -1,4 +1,6 @@
-<h1>Private Lives</h1>
+<div id="title">
+  <h1>Private Lives</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -37,7 +39,7 @@ object Lives {
     <li>The compiler reports an error on the implementation of both methods <tt>foo1</tt> and <tt>foo2</tt>.</li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
