--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -1,4 +1,6 @@
-<h1>Match Me</h1>
+<div id="title">
+  <h1>Match Me</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -34,7 +36,7 @@ j: 4
     <li id="correct-answer">The first one fails with a compilation exception and the second one fails with a runtime exception</li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
