--- a/puzzlers/pzzlr-003.html
+++ b/puzzlers/pzzlr-003.html
@@ -1,4 +1,6 @@
-<h1>UPSTAIRS downstairs</h1>
+<div id="title">
+  <h1>UPSTAIRS downstairs</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -48,7 +50,7 @@ IJ: (Int, Int) = (3, 4)
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
