--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -1,4 +1,6 @@
-<h1>The Trouble With Traits 2</h1>
+<div id="title">
+  <h1>The Trouble With Traits 2</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -67,7 +69,7 @@ In C: foo: 25, bar: 99
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
