--- a/puzzlers/pzzlr-007.html
+++ b/puzzlers/pzzlr-007.html
@@ -1,4 +1,6 @@
-<h1>Seeing Double</h1>
+<div id="title">
+  <h1>Seeing Double</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -58,7 +60,7 @@ Int = 16
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
