--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -1,4 +1,6 @@
-<h1>Captured by Closures</h1>
+<div id="title">
+  <h1>Captured by Closures</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -57,7 +59,7 @@ funcs2.foreach { f2 => println(f2()) }
     </li>
   </ol>
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
