--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -1,4 +1,6 @@
-<h1>A Case of Equality</h1>
+<div id="title">
+  <h1>A Case of Equality</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -75,7 +77,7 @@ true
 </ol>
 
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
