--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -1,4 +1,6 @@
-<h1>Self: See 'Self'</h1>
+<div id="title">
+  <h1>Self: See 'Self'</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -50,7 +52,7 @@ println(s2.length)
 </ol>
 
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
