--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -1,4 +1,6 @@
-<h1>Return to Me!</h1>
+<div id="title">
+  <h1>Return to Me!</h1>
+</div>
 <table class="table table-condensed">
   <tbody>
     <tr>
@@ -51,7 +53,7 @@ println(value)
 </ol>
 
 </div>
-<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer and explanation</button>
+<button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
