--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
               <li><a href="#" id="pzzlr-016">Self: See 'Self'</a></li>
               <li><a href="#" id="pzzlr-017">One Egg or Two..?</a></li>
               <li><a href="#" id="pzzlr-018">Return to Me!</a></li>
+              <li><a href="#" id="pzzlr-020">Curry Confusion</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
