--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -1,5 +1,5 @@
 <div id="title">
-  <h1>To Map, or Not To Map</h1>
+  <h1>To Map, or Not to Map</h1>
 </div>
 <table class="table table-condensed">
   <tbody>
