--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <li><a href="#" id="pzzlr-010">Init You, Init Me</a></li>
               <li><a href="#" id="pzzlr-011">A Case of Equality</a></li>
               <li><a href="#" id="pzzlr-012">If At First You Don't Succeed...</a></li>
-              <li><a href="#" id="pzzlr-013">To Map, or Not To Map</a></li>
+              <li><a href="#" id="pzzlr-013">To Map, or Not to Map</a></li>
               <li><a href="#" id="pzzlr-015">Private Lives</a></li>
               <li><a href="#" id="pzzlr-016">Self: See 'Self'</a></li>
               <li><a href="#" id="pzzlr-017">One Egg or Two..?</a></li>
