Renamed #20: "Curry Confusion" -> "One Bound, Two to Go" (see discussion at  https://github.com/scalapuzzlers/scalapuzzlers.github.com/pull/37)

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
               <li><a href="/#pzzlr-016" id="pzzlr-016">Self: See 'Self'</a></li>
               <li><a href="/#pzzlr-017" id="pzzlr-017">One Egg or Two..?</a></li>
               <li><a href="/#pzzlr-018" id="pzzlr-018">Return to Me!</a></li>
-              <li><a href="/#pzzlr-020" id="pzzlr-020">Curry Confusion</a></li>
+              <li><a href="/#pzzlr-020" id="pzzlr-020">One Bound, Two to Go</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
