--- a/about.html
+++ b/about.html
@@ -131,7 +131,8 @@
 	    <h2>About</h2>
             <p>
 	      This website, which is maintained by <a href="mailto:andrew@scalapuzzlers.com">Andrew Phillips</a> and <a href="http://twitter.com/#!/higherkinded">Nermin Serifovic</a>, has been created with the purpose of collecting scattered examples of Scala puzzlers in a central location on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
-	      
+	      <br/><br/>
+              We would like to extend special thanks to <a href="http://twitter.com/#!/grylix">Dominik Gruntz</a>, who not only contributed a large portion of puzzlers, but has also made this website better by providing constant feedback and suggestions.
             </p>
           </div> 
           <footer class="footer">
