Issue #39: Template: Width of the columns in the top table

--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -1,10 +1,10 @@
 <div id="title">
   <h1>To Map, or Not to Map</h1>
 </div>
-<table class="table table-condensed">
+<table class="table meta-table table-condensed">
   <tbody>
     <tr>
-      <td><strong>Contributed by</strong></td>
+      <td class="header-column"><strong>Contributed by</strong></td>
       <td>Andrew Phillips</td>
     </tr>
     <tr>
