--- a/puzzlers/pzzlr-001.html
+++ b/puzzlers/pzzlr-001.html
@@ -1,10 +1,10 @@
 <div id="title">
   <h1>Hi There!</h1>
 </div>
-<table class="table table-condensed">
+<table class="table meta-table table-condensed">
   <tbody>
     <tr>
-      <td><strong>Contributed by</strong></td>
+      <td class="header-column"><strong>Contributed by</strong></td>
       <td>Andrew Phillips & Nermin Serifovic</td>
     </tr>
     <tr>
