--- a/puzzlers/pzzlr-020.html
+++ b/puzzlers/pzzlr-020.html
@@ -1,8 +1,8 @@
 <h1>One Bound, Two to Go</h1>
-<table class="table table-condensed">
+<table class="table meta-table table-condensed">
   <tbody>
     <tr>
-      <td><strong>Contributed by</strong></td>
+      <td class="header-column"><strong>Contributed by</strong></td>
       <td>Dominik Gruntz</td>
     </tr>
     <tr>
