--- a/puzzlers/pzzlr-template.html
+++ b/puzzlers/pzzlr-template.html
@@ -1,8 +1,8 @@
 <h1>PLACEHOLDER for title</h1>
-<table class="table table-condensed">
+<table class="table meta-table table-condensed">
   <tbody>
     <tr>
-      <td><strong>Contributed by</strong></td>
+      <td class="header-column"><strong>Contributed by</strong></td>
       <td>PLACEHOLDER</td>
     </tr>
     <tr>
