Adjusts puzzler19 to the new template
I have added the css class meta-table to the table and the
class header-column to the first row of the table.

--- a/puzzlers/pzzlr-019.html
+++ b/puzzlers/pzzlr-019.html
@@ -1,8 +1,8 @@
 <h1>Implicitly Surprising</h1>
-<table class="table table-condensed">
+<table class="table meta-table table-condensed">
   <tbody>
     <tr>
-      <td><strong>Contributed by</strong></td>
+      <td class="header-column"><strong>Contributed by</strong></td>
       <td>Dominik Gruntz</td>
     </tr>
     <tr>
@@ -96,4 +96,3 @@ scala> f(2)(3)
 </pre>
 </p>
 </div>
-
