Added Puzzler 22 ("Count Me Now, Count Me Later"). Thanks, Seth!

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
               <li><a href="#" id="pzzlr-018">Return to Me!</a></li>
               <li><a href="#" id="pzzlr-019">Implicitly Surprising</a></li>
               <li><a href="#" id="pzzlr-020">One Bound, Two to Go</a></li>
+              <li><a href="#" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
