--- a/contribute.html
+++ b/contribute.html
@@ -122,6 +122,7 @@
               <li><a href="/#pzzlr-018" id="pzzlr-018">Return to Me!</a></li>
               <li><a href="/#pzzlr-019" id="pzzlr-019">Implicitly Surprising</a></li>
               <li><a href="/#pzzlr-020" id="pzzlr-020">One Bound, Two to Go</a></li>
+              <li><a href="/#pzzlr-022" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
