--- a/puzzlers/pzzlr-023.html
+++ b/puzzlers/pzzlr-023.html
@@ -19,17 +19,17 @@
 <h3>What is the result of executing the following code?</h3>
 
 <pre class="prettyprint lang-scala">
-object Overload extends App {
-  class X
-  val x = new X
-  val y = x : x.type
+class X
+val x = new X
+val y = x : x.type
 
+object Overload {
   def foo(arg: Any) = 1
   def foo(arg: x.type) = 2
-
-  println(foo(x))
-  println(foo(y : y.type))
 }
+
+println(Overload.foo(x))
+println(Overload.foo(y : y.type))
 </pre>
 
 <ol>
@@ -67,20 +67,20 @@ object Overload extends App {
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-If the method <tt>foo(x)</tt> is invoked, then overload resolution (SLS Section 6.26.3) comes into play.
-Both alternatives <tt>foo(Any)</tt> and <tt>foo(x.type)</tt> are applicable candidates.
+If the method <tt>Overload.foo(x)</tt> is invoked, then overload resolution (SLS Section 6.26.3) comes into play.
+Both alternatives <tt>foo(Any)</tt> and <tt>foo(x.type)</tt> are potentiall applicable candidates (based on the shape of the arguments).
 As a next step in overload resolution, the argument <tt>x</tt> is typed <em>without</em> an expected type and is checked against each candidate method for applicability.
 The type of the argument <tt>x</tt> is <tt>X</tt> (and not <tt>x.type</tt>) and therefore only the method <tt>foo(arg: Any)</tt> remains as alternative
-and is chosen. This explains, why <tt>foo(arg: Any)</tt> returns <tt>1</tt>.
+and is chosen. This explains, why <tt>Overload.foo(arg: Any)</tt> returns <tt>1</tt>.
 </p>
 <p>
 If a path <tt>y</tt> has singleton type <tt>x.type</tt>, then <tt>x.type</tt> and <tt>y.type</tt> are equivalent,
 i.e. they are interchangeable in all contexts (SLS Section 3.5.1).
-When <tt>foo(y : y.type)</tt> is invoked, then typing the argument results in <tt>y.type</tt>, and this type is compatible with the
+When <tt>Overload.foo(y : y.type)</tt> is invoked, then typing the argument results in <tt>y.type</tt>, and this type is compatible with the
 parameter type <tt>x.type</tt> and this variant is applicable. From the two remaining candidates in overload resolution the most
 specific alternative is chosen, and this is <tt>foo(x.type)</tt>.
 </p>
-Interesting: in the non-overloaded case the argument <tt>x</tt> is typed with the parameter type <tt>x.type</tt> as expected type.
+Interesting: in the non-overloaded case the argument <tt>x</tt> is  with the parameter type <tt>x.type</tt> as expected type.
 This typing succeeds and therefore the method is applicable to the argument <tt>x</tt> without an explicit type ascription:
 <pre class="prettyprint lang-scala">
 scala> def bar(arg: x.type) = 3
