Fixes two typos.

--- a/puzzlers/pzzlr-024.html
+++ b/puzzlers/pzzlr-024.html
@@ -71,7 +71,7 @@ d.sum(x = 0)
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-Scala uses the stataic type of a variable to bind parameter names, but the defaults are determined
+Scala uses the static type of a variable to bind parameter names, but the defaults are determined
 by the runtime type:
 <ul>
 <li>
@@ -87,5 +87,5 @@ methods are invoked at run-time.
 </ul>
 </p>
 <p>
-Josh Suereth summerizes this with the rule: <em><b>Names are static; values are runtime</b></em>.
+Josh Suereth summarizes this with the rule: <em><b>Names are static; values are runtime</b></em>.
 </div>
