Fix according to comments on pull request.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
               <li><a href="#" id="pzzlr-020">One Bound, Two to Go</a></li>
               <li><a href="#" id="pzzlr-021">Views From the Top</a></li>
               <li><a href="#" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
+              <li><a href="#" id="pzzlr-023">A Regex Puzzler</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
