--- a/puzzlers/pzzlr-025.html
+++ b/puzzlers/pzzlr-025.html
@@ -10,7 +10,7 @@
       <!--
         If no source (your puzzler is not mentioned anywhere on the web), just say N/A
       --> 
-      <td><a target="_blank">A Question on Scala-User</a></td>
+      <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-user/7B6fPJ03Vww/discussion">scala-user mailing list</a></td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
@@ -46,6 +46,7 @@ non-empty iterator
 <pre class="prettyprint lang-scala">
 empty iterator
 java.lang.IllegalStateException: No match available
+(same output as the above line on REPL, or no output from a program)
 </pre></li>
      <li id="correct-answer">
 <pre class="prettyprint lang-scala">
@@ -57,6 +58,7 @@ java.lang.IllegalStateException: No match available
 <pre class="prettyprint lang-scala">
 non-empty iterator
 java.lang.IllegalStateException: No match available
+(same output as the above line on REPL, or no output from a program)
 </pre></li>
   </ol>
 </div>
@@ -64,9 +66,9 @@ java.lang.IllegalStateException: No match available
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-  The result of findAll is an Iterator. Until you somehow ask for or check the first element,
-  such as calling next, hasNext or causing them to be called through toString, no regex match
-  will be tried, causing the "end" method -- from MatchData, also extends by MatchIterator --
+  The result of <tt>findAll</tt> is an <tt>Iterator</tt>. Until you somehow ask for or check the first element,
+  such as calling <tt>next</tt>, <tt>hasNext</tt> or causing them to be called through <tt>toString</tt>, no regex match
+  will be tried, causing the <tt>end</tt> method -- from <tt>MatchData</tt>, also extends by <tt>MatchIterator</tt> --
   to throw an exception.
   </p>
 </div>
