--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,7 @@
               <li><a href="/#pzzlr-020" id="pzzlr-020">One Bound, Two to Go</a></li>
               <li><a href="/#pzzlr-021" id="pzzlr-021">Views From the Top</a></li>
               <li><a href="/#pzzlr-022" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
+              <li><a href="/#pzzlr-023" id="pzzlr-023">Information Overload</a></li>
               <li><a href="/#pzzlr-024" id="pzzlr-024">What's In a Name?</a></li>
               <li class="divider"></li>
             </ul>
